--- a/SistemaHospitalUNI/src/Medicos/FrameMedicos.form
+++ b/SistemaHospitalUNI/src/Medicos/FrameMedicos.form
@@ -133,9 +133,9 @@
                                                   <Component id="cmbId" min="-2" pref="0" max="-2" attributes="0"/>
                                               </Group>
                                               <Group type="102" alignment="0" attributes="0">
-                                                  <Component id="jButton3" max="32767" attributes="0"/>
+                                                  <Component id="jButton3" pref="179" max="32767" attributes="0"/>
                                                   <EmptySpace min="-2" pref="152" max="-2" attributes="0"/>
-                                                  <Component id="jButton4" max="32767" attributes="0"/>
+                                                  <Component id="jButton4" pref="134" max="32767" attributes="0"/>
                                               </Group>
                                           </Group>
                                           <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
@@ -489,12 +489,12 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="lblImagen" alignment="0" pref="565" max="32767" attributes="0"/>
+                  <Component id="lblImagen" alignment="0" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="lblImagen" alignment="0" pref="289" max="32767" attributes="0"/>
+                  <Component id="lblImagen" alignment="0" pref="300" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
@@ -553,7 +553,7 @@
                 </Property>
                 <Property name="enabled" type="boolean" value="false"/>
                 <Property name="selectionModel" type="javax.swing.ListSelectionModel" editor="org.netbeans.modules.form.editors2.JTableSelectionModelEditor">
-                  <JTableSelectionModel selectionMode="1"/>
+                  <JTableSelectionModel selectionMode="0"/>
                 </Property>
                 <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
                   <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
