--- a/SistemaHospitalUNI/src/Citas/FrameCitas.form
+++ b/SistemaHospitalUNI/src/Citas/FrameCitas.form
@@ -181,6 +181,9 @@
       </Events>
     </Component>
     <Component class="com.toedter.calendar.JCalendar" name="jCalendario">
+      <Properties>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
       <Events>
         <EventHandler event="propertyChange" listener="java.beans.PropertyChangeListener" parameters="java.beans.PropertyChangeEvent" handler="jCalendarioPropertyChange"/>
       </Events>
