--- a/SistemaHospitalUNI/src/InternalFrames/FacturaCons.form
+++ b/SistemaHospitalUNI/src/InternalFrames/FacturaCons.form
@@ -194,6 +194,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextField4">
+          <Events>
+            <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jTextField4FocusLost"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="n0factura">
           <Properties>
@@ -294,10 +297,15 @@
     </Component>
     <Component class="javax.swing.JTextField" name="totaltextfield">
       <Properties>
+        <Property name="editable" type="boolean" value="false"/>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Verdana" size="11" style="0"/>
         </Property>
+        <Property name="text" type="java.lang.String" value="0"/>
       </Properties>
+      <Events>
+        <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="totaltextfieldFocusGained"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
