--- a/SistemaHospitalUNI/src/MenuSistema/SistemaPrincipal.form
+++ b/SistemaHospitalUNI/src/MenuSistema/SistemaPrincipal.form
@@ -435,6 +435,7 @@
             </Property>
           </Properties>
           <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jMenu3MouseClicked"/>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenu3ActionPerformed"/>
           </Events>
         </Menu>
